[package]
name = "img"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version="1.0.70",features=["backtrace"]}
atty = "0.2.14"
axum = "0.6.12"
coarsetime = "0.1.23"
const-str = "0.5.4"
fast_image_resize = "2.7.0"
futures = "0.3.28"
human_bytes = "0.4.1"
image = { version = "0.24.6", features = ["avif-encoder", "libwebp", "webp", "webp-encoder"] }
jpegxl-rs = { path="./jpegxl-rs/jpegxl-rs" }
jpegxl-sys = { path="./jpegxl-rs/jpegxl-sys" }
once_cell = "1.17.1"
reqwest = { version = "0.11.16", features = ["tokio-rustls", "http3"] }
strum = "0.24.1"
strum_macros = "0.24.3"
sysinfo = "0.28.4"
time = {version="0.3.20",features=["macros"]}
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-stackdriver = {version = "0.6.2", optional=true }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
# tower-http = { version = "0.4.0", features = ["trace"] }

[features]
stackdriver = ["tracing-stackdriver"]
jxl = []

[dependencies.serde]
version = "1.0.159"
features = ["derive"]

[dependencies.tokio]
version = "1.27.0"
features = ["macros", "rt-multi-thread"]

[profile.release]
lto = true
opt-level = 3
incremental = true
# codegen-units = 1
# overflow-checks = false
# panic = 'abort'
# strip = true
# debug-assertions = false

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
raw-cpuid = "10.7.0"


